# HeatTransfer

./: CMakeLists.txt  main.cpp
BoundaryConditions/: BC.h  DirihletBC.cpp  DirihletBC.h  NeumannBC.cpp  NeumannBC.h
Field/: rectangularField2D.cpp  rectangularField2D.h
Matrices/: CSRMatrix.h  Triplet.h
Operators/: Laplace.cpp  Laplace.h  partialTimeDerivative.cpp  partialTimeDerivative.h
Overloads/: Functions.h  Operators.h
Solvers/: Gauss-Seidel.h
VTK/example1/: Temperature2d-step-0.vts  Temperature2d-step-1.vts  Temperature2d-step-10.vts  Temperature2d-step-100.vts  Temperature2d-step-101.vts  Temperature2d-step-102.vts  Temperature2d-step-103.vts  Temperature2d-step-104.vts  Temperature2d-step-105.vts  Temperature2d-step-106.vts  Temperature2d-step-107.vts  Temperature2d-step-108.vts  Temperature2d-step-109.vts  Temperature2d-step-11.vts  Temperature2d-step-110.vts  Temperature2d-step-111.vts  Temperature2d-step-112.vts  Temperature2d-step-113.vts  Temperature2d-step-114.vts  Temperature2d-step-115.vts  Temperature2d-step-116.vts  Temperature2d-step-117.vts  Temperature2d-step-118.vts  Temperature2d-step-119.vts  Temperature2d-step-12.vts  Temperature2d-step-120.vts  Temperature2d-step-121.vts  Temperature2d-step-122.vts  Temperature2d-step-123.vts  Temperature2d-step-124.vts  Temperature2d-step-125.vts  Temperature2d-step-126.vts  Temperature2d-step-127.vts  Temperature2d-step-128.vts  Temperature2d-step-129.vts  Temperature2d-step-13.vts  Temperature2d-step-130.vts  Temperature2d-step-131.vts  Temperature2d-step-132.vts  Temperature2d-step-133.vts  (+460 more)
(+501 files in other folders)
